Small changes to make exporting to the server possible

--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,15 @@ vignettes/*.pdf
 
 # R Environment Variables
 .Renviron
+
+# Rstudio projets
+
+/*.Rproj
+
+# Mac parameters
+
+.DS_Store
+
+# Shiny server
+
+/rsconnect/
